flaskr/static/css/style.css
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    background-color: rgb(40, 38, 43);
    color: white;
    font-family: 'Roboto', sans-serif;
}

section {
    margin-top: 20px;
    margin-bottom: 20px;
}

a {
    color:rgb(3, 205, 255);
}

.box {
    background-color: rgb(76, 73, 82);
    border-radius: 2px;
    border-color: none;
    border-width: 0px;
    padding: 5%;
    margin-top: 5%;
    margin-bottom: 5%;
    color: white;
}

.hor {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.controls {
    background-color: rgba(255,255,255,0.1);
    border-radius: 2px;
    border-color: none;
    border-width: 0px;
    padding: 20px;
    color: white;
}

.mark {
    background-color: rgba(0,0,0,.2);
    border-radius: 2px;
    border-width: 0px;
    padding: 5px;
}

code {
    color: rgb(3, 205, 255);
}

tr, td {
    text-align: left;
    border-top: 1px solid white;
}

th {
    border-bottom: 2px solid white;
}

button {
    background-color: rgba(0,0,0,0);
    border: 1px solid rgb(3, 205, 255);
    border-radius: 5px;
    color: white;
    margin-top: 20px;
}

button:hover {
    cursor: pointer;
    background-color: rgba(0,0,0,0.1)
}

@media all and (max-width: 959px) {
    .col_0, .col_1, .col_2, .col_6 {
        display: none;
        width:0;
        height:0;
        opacity:0;
        visibility: collapse;       
    } 
}

@media (max-width: 499px) {
    .hor {
        flex-direction: column;
    }
    .hor-item {
        display: flex;
        flex-direction: row;
    }
}

@media (max-width: 368px) {
    .hor-item {
        display: flex;
        flex-direction: column;
    }
}

